<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SitySelect">

    <TextView
        android:id="@+id/textViewSitySelectTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/textview_town_select_title"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textViewSitySelectChoose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:maxLines="1"
        android:ems="12"
        android:maxLength="15"
        android:textSize="25sp"
        android:hint="@string/edittext_town_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSitySelectTitle" />

    <Spinner
        android:id="@+id/spinnerTown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:entries="@array/list_of_towns"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSitySelectChoose" />

    <CheckBox
        android:id="@+id/checkBoxWind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="52dp"
        android:checked="true"
        android:text="@string/checkbox_wind_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxAtmoPressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="20dp"
        android:checked="true"
        android:text="@string/checkbox_atmo_title"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxWind"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewAtmoInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/atmo_pressure"
        app:layout_constraintBottom_toBottomOf="@+id/checkBoxAtmoPressure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/checkBoxAtmoPressure" />

    <TextView
        android:id="@+id/textViewWindInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/wind"
        app:layout_constraintBottom_toBottomOf="@+id/checkBoxWind"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/checkBoxWind" />

</androidx.constraintlayout.widget.ConstraintLayout>